[package]
name = "pretzel"
version = "0.1.0"
edition = "2021"
description = "2D rendering 🥨"
repository = "https://github.com/schell/pretzel"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
